--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ h1
 {
     font-size: 38px;
 }
+ul li a
+{
+    display: block;
+}
 
 .container
 {
@@ -27,9 +31,45 @@ h1
 
 .navigation
 {
+    align-self: center;
     width: 100%;
     font-family: "Prata", serif;
 }
+.icon-bar
+{
+    width: 22px;
+    height: 2px;
+    background-color: #B6B6B6;
+    display: block;
+    transition: all 0.2s;
+    margin-top: 4px
+}
+.navbar-toggler .top-bar {
+    transform: rotate(45deg);
+    transform-origin: 10% 10%;
+}
+
+.navbar-toggler .middle-bar {
+    opacity: 0;
+}
+
+.navbar-toggler .bottom-bar {
+    transform: rotate(-45deg);
+    transform-origin: 10% 90%;
+}
+
+.navbar-toggler.collapsed .top-bar {
+    transform: rotate(0);
+}
+
+.navbar-toggler.collapsed .middle-bar {
+    opacity: 1;
+}
+
+.navbar-toggler.collapsed .bottom-bar {
+    transform: rotate(0);
+}
+
 nav.navbar
 {
     justify-content: space-between;
@@ -42,15 +82,22 @@ nav.navbar
 .navbar-collapse
 {
     overflow: hidden;
-    top: 100%;
+}
+.navbar-toggler
+{
+    border: none;
+    border-radius: 0;
+    outline: none !important;
+    padding: 15px;
 }
 
 .navbar-collapse.collapsing, .navbar-collapse.show
 {
     position: absolute;
+    top: 100%;
     background-color: #C8C8C8;
     display: block;
-    width: 100%;
+    width: 95%;
 }
 ul.nav
 {
@@ -61,13 +108,13 @@ ul.nav
     padding: 0 1.5rem !important;
     line-height: 50px;
 }
-.nav-link a
+.nav a
 {
     color: #333;
 }
-.nav-link a:hover
+.nav a:hover
 {
-    color: #2274a5;
+    color: #2274a5 !important;
     text-decoration: none;
 }
 
