--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ html, body
     font-family: "Lato", sans-serif;
     font-weight: 300;
     font-size: 14px;
+    scroll-behavior: auto;
 }
 h1, h2, h3, h4, h5, h6
 {
@@ -14,25 +15,36 @@ h1
 {
     font-size: 38px;
 }
+h2
+{
+    color: #676767;
+    margin-top: 20px;
+}
 ul li a
 {
     display: block;
 }
-
-.container
+.container-fluid
 {
-    display: flex;
-    flex-direction: column;
     height: 100%;
-    align-items: center;
     justify-content: center;
-    width: 80%;
+}
+.container-fluid#intro
+{
+    align-items: center;
+}
+.container-fluid#cases
+{
+    background-color: #e9f9f9;
 }
 
 .navigation
 {
+    position: absolute;
+    top: 0;
+    margin: auto auto auto 10%;
+    width: 80%;
     align-self: center;
-    width: 100%;
     font-family: "Prata", serif;
 }
 .icon-bar
@@ -118,15 +130,31 @@ ul.nav
     text-decoration: none;
 }
 
-main
+div.intro
 {
-    display: flex;
-    flex: 1;
-    align-items: center;
+    width: 80%;
+    font-size: 16px;
+    position: relative;
+    top: -5%;
     justify-content: center;
 }
-main div.intro
+div.intro .text-container
 {
     max-width: 70%;
-    font-size: 16px;
+}
+.intro p
+{
+    margin-bottom: 0;
+}
+
+div.cases
+{
+    width: 80%;
+}
+
+@media only screen and (max-width: 991px){
+    div.intro .text-container
+    {
+        max-width: 70%;
+    }
 }
