--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html, body
     height: 100%;
     font-family: "Lato", sans-serif;
     font-weight: 300;
-    font-size: 14px;
+    font-size: 16px;
     scroll-behavior: auto;
 }
 h1, h2, h4, h5, h6
@@ -18,7 +18,7 @@ h1
 h2
 {
     color: #676767;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 h3
 {
@@ -37,16 +37,23 @@ ul li a
 }
 .container-fluid
 {
-    min-height: 100%;
     justify-content: center;
 }
 .container-fluid#intro
 {
+    min-height: 100%;
     align-items: center;
 }
 .container-fluid#cases
 {
+    min-height: 100%;
     background-color: #e9f9f9;
+}
+.container-fluid#footer
+{
+    background-color: #000;
+    color: #fff;
+    font-size: 14px;
 }
 
 .navigation
@@ -57,6 +64,7 @@ ul li a
     width: 80%;
     align-self: center;
     font-family: "Prata", serif;
+    font-size: 14px;
 }
 .icon-bar
 {
@@ -140,11 +148,13 @@ ul.nav
     color: #2274a5 !important;
     text-decoration: none;
 }
+div.intro, div.cases, div.about
+{
+    width: 80%;
+}
 
 div.intro
 {
-    width: 80%;
-    font-size: 16px;
     position: relative;
     top: -5%;
     justify-content: center;
@@ -158,19 +168,15 @@ div.intro .text-container
     margin-bottom: 0;
 }
 
-div.cases
-{
-    width: 80%;
-}
-div.cases-grid-container
+div.grid-container
 {
     display: grid;
     grid-gap: 8%;
     grid-row-gap: 140px;
     grid-template-columns: repeat(2, 1fr);
-    margin-top: 60px;
+    margin: 60px 0;
 }
-.case-grid-item img
+.grid-image img
 {
     height: 250px;
 }
@@ -179,9 +185,28 @@ div.cases-grid-container
     margin: auto;
 }
 
-@media only screen and (max-width: 991px){
-    div.intro .text-container
-    {
-        max-width: 70%;
-    }
+.about h2
+{
+    text-align: right;
+}
+
+.footer
+{
+    padding: 30px 0;
+    width: 80%;
+}
+.footer-grid
+{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.footer-grid div a
+{
+    font-weight: 400;
+    color: #2274a5;
+    text-decoration: none;
+}
+.footer-grid div a:hover
+{
+    color: #2274a5;
 }
