--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html, body
     font-family: "Lato", sans-serif;
     font-weight: 300;
     font-size: 16px;
-    scroll-behavior: auto;
+    scroll-behavior: smooth;
 }
 h1, h2, h4, h5, h6
 {
@@ -46,12 +46,10 @@ a:hover
 }
 .container-fluid#intro
 {
-    min-height: 100%;
     align-items: center;
 }
 .container-fluid#cases
 {
-    min-height: 100%;
     background-color: #e9f9f9;
 }
 .container-fluid#cta
@@ -63,6 +61,14 @@ a:hover
     background-color: #000;
     color: #fff;
     font-size: 14px;
+}
+.container-fluid.full-height
+{
+    min-height: 100%;
+}
+.container-fluid.full-height.safezone
+{
+    padding: 150px 0 50px 0;
 }
 
 .navigation
@@ -148,6 +154,11 @@ ul.nav
     padding: 0 1.5rem !important;
     line-height: 50px;
 }
+.nav-link.current a
+{
+    color: #2274a5;
+    pointer-events: none;
+}
 .nav a
 {
     color: #333;
@@ -156,7 +167,7 @@ ul.nav
 {
     color: #2274a5 !important;
 }
-div.intro, div.cases, div.about, div.cta, div.footer
+div.intro, div.cases, div.about, div.cta, div.footer, div.people
 {
     max-width: 940px;
 }
@@ -189,6 +200,33 @@ div.grid-container div
 {
     margin: auto;
 }
+
+div.people
+{
+    display: flex;
+    flex: 1 0 auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+div.people img
+{
+    filter: grayscale(100%);
+    transition: all 500ms ease-in-out;
+    max-width: 100%;
+}
+div.people img:hover
+{
+    filter: none;
+}
+div.people #people-grid
+{
+    display: grid;
+    grid-gap: 8%;
+    grid-row-gap: 140px;
+    grid-template-columns: 1fr 3fr;
+}
+
 .grid-image img
 {
     height: 300px;
@@ -239,6 +277,10 @@ div#cta:hover
 {
     padding: 30px 0;
     width: 940px;
+    position: relative;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 .footer-grid
 {
