--- a/hoekstraenveldhuis.nl/styles/globals.css
+++ b/hoekstraenveldhuis.nl/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Lato, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-weight: 300;
 }
 
 a {
@@ -15,7 +16,12 @@ a {
   box-sizing: border-box;
 }
 
-.layout {
+.content {
   max-width: 940px;
   margin: 0 auto;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Prata", serif;
+  font-weight: 500;
 }
