--- a/hoekstraenveldhuis.nl/styles/globals.css
+++ b/hoekstraenveldhuis.nl/styles/globals.css
@@ -7,6 +7,14 @@ body {
   font-weight: 300;
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -16,12 +24,30 @@ a {
   box-sizing: border-box;
 }
 
+.websiteContainer {
+  min-height: 100vh;
+}
+
+#__next {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .content {
   max-width: 940px;
   margin: 0 auto;
+  flex-grow: 1;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Prata", serif;
   font-weight: 500;
+}
+
+.layout {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
