--- a/hoekstraenveldhuis.nl/styles/Footer.module.css
+++ b/hoekstraenveldhuis.nl/styles/Footer.module.css
@@ -5,6 +5,20 @@
 .footerContainer {
     width: 100%;
     background-color: #000000;
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 1.5;
+}
+
+.footerContent {
+    max-width: 940px;
+    margin: 0 auto;
+    padding: 30px 0;
+}
+
+.footerGrid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
 }
 
 .ctaContainer {
