--- a/hoekstraenveldhuis.nl/styles/Header.module.css
+++ b/hoekstraenveldhuis.nl/styles/Header.module.css
@@ -1,6 +1,7 @@
 .navigation
 {
     max-width: 940px;
+    width: 100%;
     margin: 0 auto;
     align-self: center;
     font-family: "Prata", serif;
