--- a/hoekstraenveldhuis.nl/styles/globals.css
+++ b/hoekstraenveldhuis.nl/styles/globals.css
@@ -45,6 +45,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
 }
 
+h2 {
+  font-size: 32px;
+}
+
 .layout {
   min-height: 100vh;
   display: flex;
