--- a/hoekstraenveldhuis.nl/styles/Footer.module.css
+++ b/hoekstraenveldhuis.nl/styles/Footer.module.css
@@ -45,3 +45,28 @@
     padding: 30px 0;
     margin: 0 auto;
 }
+
+.footerContainer a {
+    font-weight: 400;
+}
+
+a.underlined {
+    display: inline-block;
+}
+
+a.underlined::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 1px;
+    background: #ffffff;
+    transition: width .3s;
+}
+
+a.underlined:hover {
+    color: #ffffff;
+}
+
+a.underlined:hover::after {
+    width: 100%;
+}
