--- a/hoekstraenveldhuis.nl/styles/globals.css
+++ b/hoekstraenveldhuis.nl/styles/globals.css
@@ -55,3 +55,12 @@ h2 {
   flex-direction: column;
   align-items: stretch;
 }
+
+a {
+  color: #2274a5;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
