--- a/hoekstraenveldhuis.nl/styles/BookComponent.module.css
+++ b/hoekstraenveldhuis.nl/styles/BookComponent.module.css
@@ -1,5 +1,17 @@
 .bookContainer {
+    display: grid;
+    grid-template-columns: 25% auto;
+    grid-column-gap: 50px;
+    padding: 50px 0;
+    align-items: center;
+}
 
+.bookContainer img {
+    max-width: 90%;
+    filter: grayscale(80%);
+    -webkit-filter: grayscale(80%);
+    transition: all 500ms ease-in-out;
+    -webkit-transition: all 500ms ease-in-out;
 }
 
 .bookContainer h2 {
