--- a/hoekstraenveldhuis.nl/styles/ProjectOverviewComponent.module.css
+++ b/hoekstraenveldhuis.nl/styles/ProjectOverviewComponent.module.css
@@ -1,11 +1,28 @@
-.projectLeft {
+.projectGrid {
     display: grid;
-    grid-template-columns: 55% auto;
+    grid-template-columns: 50% auto;
     grid-column-gap: 50px;
+    grid-row-gap: 120px;
+    align-items: center;
 }
 
-.projectRight {
-    display: grid;
-    grid-template-columns: 45% auto;
-    grid-column-gap: 50px;
+.projectTitle {
+    color: #676767;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.projectDescription {
+    font-size: 38px;
+    font-weight: bold;
+}
+
+.projectOverviewContainer img {
+    max-height: 300px;
+    padding: 20px;
+}
+
+.projectOverviewContainer h2 {
+    padding: 40px 0 0;
+    color: #676767;
 }
