--- a/src/styles/ContactFormComponent.module.css
+++ b/src/styles/ContactFormComponent.module.css
@@ -26,6 +26,11 @@
     border-radius: 0;
     margin-top: 10px;
     font-weight: 400;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
+    padding: 0.375rem 0.75rem;
 }
 
 .contactForm button:hover {
@@ -37,7 +42,6 @@
     color: #C8C8C8;
     border-color: #C8C8C8;
     background-color: transparent;
-    pointer-events: none;
     opacity: 0.65;
 }
 
