No pointer events on disabled button

--- a/src/styles/ContactFormComponent.module.css
+++ b/src/styles/ContactFormComponent.module.css
@@ -42,6 +42,7 @@
     color: #C8C8C8;
     border-color: #C8C8C8;
     background-color: transparent;
+    pointer-events: none;
     opacity: 0.65;
 }
 
