--- a/src/styles/atoms/ScrollDownComponent.module.css
+++ b/src/styles/atoms/ScrollDownComponent.module.css
@@ -7,7 +7,7 @@
 }
 
 .scrollDownContainer h1, .scrollDownContainer h2 {
-    font-size: 38px;
+    font-size: 30px;
 }
 
 .scrollDownContainer p {
@@ -21,4 +21,10 @@
 .scrollDownAnimationContainer {
     max-width: 60px;
     margin-left: -7px;
+}
+
+@media only screen and (min-width: 768px) {
+    .scrollDownContainer h1, .scrollDownContainer h2 {
+        font-size: 38px;
+    }
 }
