--- a/src/styles/atoms/AboutUsComponent.module.css
+++ b/src/styles/atoms/AboutUsComponent.module.css
@@ -21,6 +21,7 @@
 
 @media only screen and (min-width: 768px) {
     .aboutUsGrid {
+        display: grid;
         grid-template-columns: 50% 50%;
     }
 
