--- a/src/styles/pages/LandingPage.module.css
+++ b/src/styles/pages/LandingPage.module.css
@@ -1,7 +1,7 @@
 .landingPageContainer {
-    max-width: 70%;
+    width: 100%;
+    padding: 10px 15px 50px;
     margin: 0 auto;
-    padding: 10px 0 50px 0;
 }
 
 .landingPageContainer h1 {
@@ -19,4 +19,12 @@
 
 .landingPageContainer p {
     line-height: 1.5;
+}
+
+@media only screen and (min-width: 768px) {
+    .landingPageContainer {
+        max-width: 70%;
+        padding: 10px 0 50px 0;
+    }
+
 }
